move endmember extraction lesson to archive, pysptools does not work with latest versions of Python

--- a/tutorials-archive/Python/AOP/Hyperspectral/classification/endmember-extraction/endmember_extraction.ipynb
+++ b/tutorials-archive/Python/AOP/Hyperspectral/classification/endmember-extraction/endmember_extraction.ipynb
@@ -15,10 +15,10 @@
     "packagesLibraries: numpy, gdal, matplotlib, matplotlib.pyplot\n",
     "topics: hyperspectral-remote-sensing, HDF5, remote-sensing\n",
     "languagesTool: python\n",
-    "dataProduct: NEON.DP1.30006, NEON.DP3.30006, NEON.DP1.30008\n",
-    "code1: https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/Python/Hyperspectral/hyperspectral-classification/classification_endmember_extraction_py/classification_endmember_extraction_py.ipynb\n",
-    "tutorialSeries: intro-hsi-py-series\n",
-    "urlTitle: classification-endmember-python\n",
+    "dataProduct: NEON.DP1.30006, NEON.DP3.30006\n",
+    "code1: https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/AOP/Hyperspectral/classification/endmember_extraction/endmember_extraction.ipynb\n",
+    "tutorialSeries: \n",
+    "urlTitle: endmember-extraction\n",
     "---"
    ]
   },
@@ -26,30 +26,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This tutorial runs through an example of spectral unmixing to carry out unsupervised classification of a SERC hyperspectral data file using the <a href=\"https://pysptools.sourceforge.io/index.html\" target=\"_blank\">PySpTools package</a> to carry out **endmember extraction**, plot **abundance maps** of the spectral endmembers, and use **Spectral Angle Mapping** and **Spectral Information Divergence** to classify the SERC tile. \n",
+    "This tutorial runs through an example of spectral unmixing to carry out unsupervised classification of a SERC hyperspectral data file using the <a href=\"https://pysptools.sourceforge.io/index.html\" target=\"_blank\">`pysptools` package</a> to carry out **endmember extraction**, plot **abundance maps** of the spectral endmembers, and then uses **Spectral Angle Mapping** and **Spectral Information Divergence** to classify the SERC tile. This illustrates some different classification techniques.\n",
     "\n",
     "<div id=\"ds-objectives\" markdown=\"1\">\n",
     "\n",
     "### Objectives\n",
     "After completing this tutorial, you will be able to:\n",
     "\n",
-    "* Classify spectral remote sensing data. \n",
+    "* Carry out endmember extraction on an AOP hyperspectral reflectance tile\n",
+    "* Create abundance maps of spectral endmembers\n",
+    "* Classify a hyperspectral tile using Spectral Angle Mapping (SAM) and Spectral Information Divergence (SID) algorithms\n",
     "\n",
     "### Install Python Packages\n",
     "\n",
-    "* **numpy**\n",
-    "* **gdal** \n",
-    "* **matplotlib** \n",
-    "* **matplotlib.pyplot** \n",
-    "\n",
+    "* **gdal**\n",
+    "* **h5py**\n",
+    "* **neonutilities**\n",
+    "* **pysptools**\n",
+    "* **scipy**\n",
+    "* **scikit-learn**\n",
     "\n",
     "### Download Data\n",
     "\n",
-    "This tutorial uses a 1km AOP Hyperspectral Reflectance 'tile' from the SERC site. <a href=\"https://ndownloader.figshare.com/files/25752665\">\n",
-    "Download the spectral classification teaching data subset here</a>.\n",
+    "This tutorial uses an AOP Hyperspectral Reflectance 'tile' from the <a href=\"https://www.neonscience.org/field-sites/serc\" target=\"_blank\">Smithsonian Environmental Research Center (SERC)</a> site. \n",
     "\n",
-    "<a href=\"https://ndownloader.figshare.com/files/25752665\" class=\"link--button link--arrow\">\n",
-    "Download Dataset</a>\n",
+    "Data is downloaded in the beginning of the code using the Python `neonutilities.by_tile_aop` function.\n",
+    "\n",
     "\n",
     "</div>"
    ]
@@ -60,18 +62,20 @@
    "source": [
     "This tutorial runs through an example of spectral unmixing to carry out unsupervised classification of a SERC hyperspectral data file using the <a href=\"https://pysptools.sourceforge.io/index.html\" target=\"_blank\">PySpTools package</a> to carry out **endmember extraction**, plot **abundance maps** of the spectral endmembers, and use **Spectral Angle Mapping** and **Spectral Information Divergence** to classify the SERC tile.  \n",
     "\n",
-    "Since spectral data is so large in size, it is often useful to remove any unncessary or redundant data in order to save computational time. In this example, we will remove the water vapor bands, but you can also take a subset of bands, depending on your research application. \n",
+    "Since spectral data is so large in size, it is often useful to remove any unncessary or redundant data in order to save computational time. In this example, we will remove the water vapor bands, but you can also run a PCA (Principal Compnent Analysis) or subset the bands, depending on your research application. \n",
     "\n",
     "## Set up\n",
     "\n",
-    "To run this notebook, the following Python packages need to be installed. \n",
+    "To run this notebook, Python version 3.5 or 3.6 is required and the following Python packages need to be installed. \n",
+    "\n",
+    "Note: PySpTools was last updated in 2018 so is not compatible with later versions of Python. See https://pysptools.sourceforge.io/\n",
     "\n",
     "You can install required packages from command line `pip install pysptools scikit-learn cvxopt`.\n",
     "\n",
     "or if already in a Jupyter Notebook:  \n",
     "\n",
-    "1. PySpTools: Download <a href=\"https://pypi.python.org/pypi/pysptools\" target=\"_blank\">pysptools-0.14.2.tar.gz</a>.\n",
-    "2. Run the following code in a Notebook code cell. "
+    "PySpTools: Download <a href=\"https://pypi.python.org/pypi/pysptools\" target=\"_blank\">pysptools-0.14.2.tar.gz</a>.\n",
+    "   `pip install pysptools`\n"
    ]
   },
   {
@@ -98,7 +102,7 @@
     "* **`clean_neon_refl_data`**: function to clean NEON hyperspectral data, including applying the data ignore value and reflectance scale factor, and removing water vapor bands\n",
     "* **`plot_aop_refl`**: function to plot a band of NEON hyperspectral data for reference\n",
     "\n",
-    "Once PySpTools is installed, import the following packages. "
+    "Once `pysptools` is installed, import the following packages:"
    ]
   },
   {
@@ -111,16 +115,26 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pysptools.util as util\n",
-    "import pysptools.eea as eea #endmembers extraction algorithms\n",
+    "import pysptools.eea as eea #endmember extraction algorithms\n",
     "import pysptools.abundance_maps as amap\n",
     "import pysptools.classification as cls\n",
-    "import pysptools.material_count as cnt\n",
-    "\n",
-    "%matplotlib inline\n",
-    "\n",
-    "#for clean output, to not print warnings, don't use when developing script\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "import pysptools.material_count as cnt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import the `neonutilities` package for downloading AOP data. This is only compatible with Python versions 3.9+ so will not work with `pysptools` in the same environment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import neonutilities as nu"
    ]
   },
   {
@@ -176,12 +190,12 @@
     "    #Extract the reflectance & wavelength datasets\n",
     "    refl = hdf5_file[sitename]['Reflectance']\n",
     "    reflData = refl['Reflectance_Data']\n",
-    "    reflArray = refl['Reflectance_Data'].value\n",
+    "    reflArray = refl['Reflectance_Data'][()]\n",
     "    \n",
     "    #Create dictionary containing relevant metadata information\n",
     "    metadata = {}\n",
-    "    metadata['map info'] = refl['Metadata']['Coordinate_System']['Map_Info'].value\n",
-    "    metadata['wavelength'] = refl['Metadata']['Spectral_Data']['Wavelength'].value\n",
+    "    metadata['map info'] = refl['Metadata']['Coordinate_System']['Map_Info'][()]\n",
+    "    metadata['wavelength'] = refl['Metadata']['Spectral_Data']['Wavelength'][()]\n",
     "\n",
     "    #Extract no data value & set no data value to NaN\n",
     "    metadata['data ignore value'] = float(reflData.attrs['Data_Ignore_Value'])\n",
@@ -196,22 +210,29 @@
     "    metadata['bad_band_window2'] = (refl.attrs['Band_Window_2_Nanometers'])\n",
     "    \n",
     "    #Extract projection information\n",
-    "    metadata['projection'] = refl['Metadata']['Coordinate_System']['Proj4'].value\n",
-    "    metadata['epsg'] = int(refl['Metadata']['Coordinate_System']['EPSG Code'].value)\n",
+    "    metadata['projection'] = refl['Metadata']['Coordinate_System']['Proj4'][()]\n",
+    "    metadata['epsg'] = int(refl['Metadata']['Coordinate_System']['EPSG Code'][()])\n",
     "    \n",
     "    #Extract map information: spatial extent & resolution (pixel size)\n",
-    "    mapInfo = refl['Metadata']['Coordinate_System']['Map_Info'].value\n",
+    "    mapInfo = refl['Metadata']['Coordinate_System']['Map_Info'][()]\n",
     "    \n",
     "    hdf5_file.close        \n",
     "    \n",
-    "    return reflArray, metadata\n"
+    "    return reflArray, metadata"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that the function is defined, we can call it to read in the sample reflectance file. Note that if your data is stored in a different location, you'll have to change the relative path, or include the absolute path. "
+    "nu.list_available_sites?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use the `by_tile_aop` function to download a single tile. If you aren't sure of the inputs, you can type `nu.by_tile_aop?`."
    ]
   },
   {
@@ -220,17 +241,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# You will need to download the example dataset using the link above, \n",
-    "# then update the filepath below to fit your local file structure\n",
-    "h5refl_filename = '/Users/olearyd/Git/data/NEON_D02_SERC_DP3_368000_4306000_reflectance.h5'\n",
-    "data,metadata = read_neon_reflh5(h5refl_filename)"
+    "nu.by_tile_aop?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download a single reflectance tile to your local directory under a './data' subfolder\n",
+    "nu.by_tile_aop(dpid='DP3.30006.002',\n",
+    "               site='SERC',\n",
+    "               year='2022',\n",
+    "               easting=368005,\n",
+    "               northing=4306005,\n",
+    "               #token = 'your_token_here',\n",
+    "               include_provisional=True,\n",
+    "               savepath='C:/users/bhass/data/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for root, dirs, files in os.walk('C:\\\\users\\\\bhass\\\\data\\\\'):\n",
+    "    for file in files:\n",
+    "        if file.endswith(\".h5\"):\n",
+    "             print(os.path.join(root, file))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "refl_filename = r'C:\\users\\bhass\\data\\DP3.30006.002\\neon-aop-provisional-products\\2022\\FullSite\\D02\\2022_SERC_6\\L3\\Spectrometer\\Reflectance\\NEON_D02_SERC_DP3_368000_4306000_bidirectional_reflectance.h5'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's take a quick look at the data contained in the `metadata` dictionary with a `for loop`:"
+    "Now we can use the read_neon_reflh5 function to read in the h5 reflectance tile. This may take a little while to run."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data, metadata = read_neon_reflh5(refl_filename)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's take a quick look at the data contained in the `metadata` dictionary as follows:"
    ]
   },
   {
@@ -247,18 +319,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    bad_band_window1\n",
-    "    bad_band_window2\n",
-    "    data ignore value\n",
-    "    epsg\n",
-    "    interleave\n",
-    "    map info\n",
-    "    projection\n",
-    "    reflectance scale factor\n",
-    "    spatial extent\n",
-    "    wavelength\n",
-    "\n",
-    "\n",
     "Now we can define a function that cleans the reflectance cube. Note that this also removes the water vapor bands, stored in the metadata as `bad_band_window1` and `bad_band_window2`, as well as the last 10 bands, which tend to be noisy. It is important to remove these values before doing classification or other analysis."
    ]
   },
@@ -312,7 +372,7 @@
     "    \n",
     "    metadata_clean['wavelength'] = [metadata['wavelength'][i] for i in valid_band_range]\n",
     "    \n",
-    "    return data_clean, metadata_clean\n"
+    "    return data_clean, metadata_clean"
    ]
   },
   {
@@ -328,7 +388,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_clean,metadata_clean = clean_neon_refl_data(data,metadata)"
+    "data_clean, metadata_clean = clean_neon_refl_data(data, metadata)"
    ]
   },
   {
@@ -374,7 +434,7 @@
    "source": [
     "![ ](https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/py-figs/classification_endmember_extraction_py/output_17_0.png)\n",
     "\n",
-    "Lastly, let's take a look at the data using the function `plot_aop_refl` function:"
+    "Lastly, let's take a look at a single band of the data using the function `plot_aop_refl` function:"
    ]
   },
   {
@@ -415,10 +475,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![ ](https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/py-figs/classification_endmember_extraction_py/output_20_0.png)\n",
-    "\n",
-    "\n",
     "## Unsupervised Classification with Spectral Unmixing: \n",
+    "\n",
     "### Endmember Extraction and Abundance Mapping\n",
     "\n",
     "**Spectral Unmixing** allows pixels to be composed of fractions or abundances of each class.**Spectral Endmembers** can be thought of as the basis spectra of an image. Once these endmember spectra are determined, the image cube can be 'unmixed' into the fractional abundance of each material in each pixel (Winter, 1999).\n",
@@ -444,8 +502,11 @@
    "source": [
     "#eea = data_clean\n",
     "ee = eea.NFINDR()\n",
-    "U = ee.extract(data_clean,4,maxit=5,\n",
-    "               normalize=False,ATGP_init=True)"
+    "U = ee.extract(data_clean, \n",
+    "               4, \n",
+    "               maxit=5,\n",
+    "               normalize=False, \n",
+    "               ATGP_init=True)"
    ]
   },
   {
@@ -726,7 +787,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -740,7 +801,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
