fix link to data product, minor edits

--- a/tutorials/Python/AOP/Hyperspectral/classification/kmeans-pca/classification_kmeans_pca.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/classification/kmeans-pca/classification_kmeans_pca.ipynb
@@ -50,12 +50,9 @@
     "\n",
     "### Download Data\n",
     "\n",
-    "This tutorial uses a AOP Hyperspectral Surface Bidirectional Reflectance tile (1 km x 1 km) from the NEON <a href=\"https://www.neonscience.org/field-sites/serc\" target=\"blank\">Smithsonian Environmental Research Center (SERC)</a> site.\n",
+    "This tutorial uses am AOP <a href=\"https://data.neonscience.org/data-products/DP3.30006.002\" target=\"blank\">Hyperspectral Surface Bidirectional Reflectance</a> tile (1 km x 1 km) from the NEON <a href=\"https://www.neonscience.org/field-sites/serc\" target=\"blank\">Smithsonian Environmental Research Center (SERC)</a> site.\n",
     "\n",
-    "Spectrometer orthorectified surface bidirectional reflectance - mosaic\n",
-    "https://data.neonscience.org/data-products/DP3.30006.002\n",
-    "\n",
-    "Data will be downloaded as part of the lesson using the Python `neonutilities` package\n",
+    "The data required for this lesson will be downloaded in the beginning of the tutorial using the Python `neonutilities` package.\n",
     "\n",
     "</div>"
    ]
