updates to kmeans lesson, fix images & add final challenge question

--- a/tutorials/Python/AOP/Hyperspectral/classification/kmeans-pca/classification_kmeans_pca.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/classification/kmeans-pca/classification_kmeans_pca.ipynb
@@ -305,6 +305,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next few cells show how you can look at the contents, values, and dimensions of the `refl_metadata`, `wavelengths`, and `refl` variables, respectively."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -438,6 +445,13 @@
     "    wavelengths_clean =[wavelengths[i] for i in valid_bands_subset]\n",
     "    \n",
     "    return data_clean, wavelengths_clean"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now use this function to clean and subset the data, using a subset factor of 2 to start."
    ]
   },
   {
@@ -864,17 +878,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When dealing with NEON hyperspectral data, we first want to remove the water vapor & noisy bands, keeping only the valid bands. To speed up the classification algorithms for demonstration purposes, we'll look at a subset of the data using `read_subimage`, a built in method to subset by area and bands. Type `help(img.read_subimage)` to see how it works. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Challenges: K-Means\n",
+    "## Challenge Questions: K-Means\n",
     "\n",
     "1. What do you think the spectral classes in the figure you just created represent? \n",
-    "2. Try using a different number of clusters in the `kmeans` algorithm (e.g., 3 or 10) to see what spectral classes and classifications result. "
+    "2. Try using a different number of clusters in the `kmeans` algorithm (e.g., 3 or 10) to see what spectral classes and classifications result.\n",
+    "3. Try using  different (higher) subset_factor in the `clean_neon_refl_data` function, like 3 or 5. Does this factor change the final classes that are created in the kmeans algorithm? By how much can you subset the data by and still achieve similar classification results?"
    ]
   },
   {
@@ -925,7 +933,11 @@
    "source": [
     "You can see that even though we've only retained a subset of the bands, a lot of the details about the scene are still visible.\n",
     "\n",
-    "If you had training data, you could use a Gaussian maximum likelihood classifier (GMLC) for the reduced principal components to train and classify against the training data."
+    "If you had training data, you could use a Gaussian maximum likelihood classifier (GMLC) for the reduced principal components to train and classify against the training data.\n",
+    "\n",
+    "## Challenge Questions: PCA\n",
+    "\n",
+    "1. Run K-means after running PCA and see if you get similar results. Does / how does reducing the data dimensionality affect the classification results?"
    ]
   },
   {
