update figures, change didn't go through last time

--- a/tutorials/Python/AOP/Hyperspectral/classification/kmeans-pca/classification_kmeans_pca.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/classification/kmeans-pca/classification_kmeans_pca.ipynb
@@ -937,7 +937,7 @@
     "\n",
     "## Challenge Questions: PCA\n",
     "\n",
-    "1. Run K-means after running PCA and see if you get similar results. Does / how does reducing the data dimensionality affect the classification results?"
+    "1. Run the k-means classification after running PCA and see if you get similar results. Does / how does reducing the data dimensionality affect the classification results?"
    ]
   },
   {
