edits and blurb expansions

--- a/tutorials/Other/GEE_Python/04_aop_gbif/Intro_AOP_GBIF_GEE_Python.ipynb
+++ b/tutorials/Other/GEE_Python/04_aop_gbif/Intro_AOP_GBIF_GEE_Python.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "---\n",
     "syncID: \n",
-    "title: \"Exploring NEON AOP remote sensing and GBIF occurence data in Google Earth Engine Python (geemap) to assess the impacts of a wildfire\"\n",
+    "title: \"Exploring NEON AOP remote sensing and GBIF occurrence data in Google Earth Engine Python (geemap) to assess the impacts of a wildfire\"\n",
     "description: \"Explore AOP reflectance along with \"\n",
     "dateCreated: 2025-04-24\n",
     "authors: Kit Lewers\n",
@@ -26,27 +26,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exploring NEON AOP (Airborne Operations Platform) and BioRepository Data Together"
+    "## Exploring NEON AOP (Airborne Operations Platform) and Biorepository Data Together"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this tutorial, we will pull in NEON airborne hyperspectral data collected in 2016 and 2017 at the NEON <a href=\"https://www.neonscience.org/field-sites/grsm\" target=\"_blank\">GRSM (Great Smokey Mountains)</a> site. Between the 2016 and 2017 data collections, the <a href=\"https://www.neonscience.org/impact/observatory-blog/neons-great-smoky-mountains-data-will-capture-tennessee-fire-impacts-local\" target=\"_blank\">Chimney Tops Fire</a> occurred within the flight box, leaving a prominent burn scar. We will use the GEE (Google Earth Engine) Python API to explore the burn scar using the NBR (Normalized Burn Ratio) to set a threshold to identify burned and unburned areas. We will then us the PyGBIF API (Python Global Biodiversity Information Facility) to pull records from the NEON BioRepository to see if and/or how Carabid beetle traps in the domain were impacted by the fires.\n",
+    "In this tutorial, we will use NEON airborne hyperspectral data collected in 2016 and 2017 at the NEON <a href=\"https://www.neonscience.org/field-sites/grsm\" target=\"_blank\">GRSM (Great Smokey Mountains)</a> site to map the area affected by the <a href=\"https://www.neonscience.org/impact/observatory-blog/neons-great-smoky-mountains-data-will-capture-tennessee-fire-impacts-local\" target=\"_blank\">Chimney Tops Fire</a>. We will use the GEE (Google Earth Engine) Python API to explore the burn scar using the NBR (Normalized Burn Ratio) to set a threshold to identify burned and unburned areas. We will then use the <a href=\"https://pygbif.readthedocs.io/\" target=\"_blank\">pygbif</a> (Python Global Biodiversity Information Facility) library to pull records from the NEON Biorepository to see if and/or how Carabid beetle communities in the domain were impacted by the fires.\n",
     "\n",
-    "Why is this a useful analysis? \n",
-    "\n",
-    "Combining these two datasets can give spatial context for the GBIF data and ...\n",
+    "This workflow illustrates how NEON’s open data products—airborne remote sensing and biodiversity occurrence records—can be integrated to explore species-level responses to spatially explicit disturbances. By overlaying mapped burn areas with species occurrence data, we can assess whether wildfire affected the composition or distribution of ground beetle communities. Beyond this specific case, the approach highlights the potential of combining ecological and remote sensing data to investigate landscape-scale disturbance impacts, recovery dynamics, and long-term changes in community structure.\n",
     "\n",
     "### Background\n",
+    "#### NEON AOP\n",
+    "something here about AOP --> GEE?\n",
     "\n",
-    "<< Background on NEON Biorepository and GBIF + AOP >>"
+    "#### Ground Beetles and the NEON Biorepository\n",
+    "Ground beetles (Coleoptera: Carabidae) are widely recognized as effective bioindicators due to their sensitivity to environmental changes, particularly in relation to environmental changes, vegetation structure, and habitat disturbance. They are highly diverse, relatively easy to sample, and their community composition often reflect changes in local and landscape-scale conditions. Following natural or anthropogenic disturbances, beetle communities typically shift — favoring small-bodied, mobile, and ecologically flexible species in the early stages of recovery. As the habitat stabilizes over time, habitat specialists become more prevalent. Tracking these changes in species composition and abundance offers insight into ecosystem processes and can help assess the trajectory of recovery or the effectiveness of restoration efforts.\n",
+    "\n",
+    "At NEON field sites, Carabid beetles are captured biweekly during the growing season using pitfall traps. Once collected, the beetles are sorted and identified to the species level. Some of the specimens are preserved as reference vouchers by pinning, while the remaining beetles are stored in 95% ethanol for future archival purposes. These specimens are ultimately stored in the NEON Biorepository, housed at Arizona State University, for long-term storage and curation. The NEON Biorepository makes these datasets available via <a href=\"https://www.gbif.org/\" target=\"_blank\">GBIF</a>, a global platform that aggregates biodiversity data from thousands of sources.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "<div id=\"ds-objectives\" markdown=\"1\">\n",
     "\n",
@@ -55,7 +62,7 @@
     "\n",
     "* Read in multiple visits and visualize AOP reflectance datasets\n",
     "* Calculate NBR (Normalized Burn Ratio) from reflectance data\n",
-    "* Read in GBIF Occurence Records using the pygbif package\n",
+    "* Read in GBIF Occurrence Records using the pygbif package\n",
     "* Visualize AOP Imagery and GBIF records together\n",
     "* Conduct exploratory analysis to see if and how the fire impacted the beetle trap presence/absence data\n",
     "\n",
@@ -87,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 1: Reading in and Visualizing AOP Imagery and GBIF Occurence Records"
+    "## Part 1: Reading in and Visualizing AOP Imagery and GBIF Occurrence Records"
    ]
   },
   {
@@ -480,11 +487,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Read in GBIF Occurences Data\n",
+    "#### Read in GBIF Occurrence Data\n",
     "\n",
-    "< BLURB ON what GBIF Occurences Data Are >\n",
+    "Primary biodiversity data, also known as occurrence data, consist of records documenting observations of specific species at particular locations and times. These records form the foundation for understanding species distributions, tracking biodiversity changes over time, and supporting ecological and conservation research.\n",
     "\n",
-    "Next we'll read in the carabid beetle records from `pygbif occurences`, imported as `gbif_occ` and create a geodataframe from those data."
+    "To begin exploring these patterns, we'll read in the carabid beetle occurrence records using `gbif_occ` and create a geodataframe from those data."
    ]
   },
   {
@@ -688,7 +695,7 @@
     "\n",
     "In this next section, we'll see if we can gain any insights as to if and how the fire impacted the GBIF beetle trap records.\n",
     "\n",
-    "This next chunk of code vectorizes the burn scar mask, which we can be used to assess differences in the GBIF occurence data relative to burn percentages for a given area."
+    "This next chunk of code vectorizes the burn scar mask, which we can be used to assess differences in the GBIF occurrence data relative to burn percentages for a given area."
    ]
   },
   {
@@ -834,9 +841,8 @@
    "metadata": {},
    "source": [
     "#### Compare GBIF presence / absence data from 2016 to 2017\n",
-    "Next we will look at the GBIF presence and absence data between the pre- and post- fire collections. \n",
     "\n",
-    "< What is presence / absence data ?? >"
+    "Next, we will compare species presence data from GBIF for ground beetles collected before and after the fire, using 2016 (pre-fire) and 2017 (post-fire) records. By examining which species were detected in each year, we can infer absences and explore changes in community composition following the disturbance, shedding light on how the fire may have influenced beetle species richness.\n"
    ]
   },
   {
@@ -960,7 +966,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that the abundances in 2017 are lower than 2016 at all four plots."
+    "We can see that the species richness in 2017 is lower than 2016 at all four plots."
    ]
   },
   {
@@ -1339,7 +1345,7 @@
     "\n",
     "### Recap\n",
     "\n",
-    "Congratulations! In this lesson you have learned how to work with GBIF and NEON AOP data together, using `geemap` and `pygbif`, and have gone through an example to assess impacts of a wildfire on beetle trap occurence data.\n",
+    "Congratulations! In this lesson you have learned how to work with GBIF and NEON AOP data together, using `geemap` and `pygbif`, and have gone through an example to assess impacts of a wildfire on beetle trap occurrence data.\n",
     "\n",
     "**Author Contact**:\n",
     "\n",
@@ -1363,7 +1369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
