--- a/tutorials/Other/GEE_Python/04_aop_gbif/Intro_AOP_GBIF_GEE_Python.ipynb
+++ b/tutorials/Other/GEE_Python/04_aop_gbif/Intro_AOP_GBIF_GEE_Python.ipynb
@@ -64,7 +64,7 @@
     "* Calculate NBR (Normalized Burn Ratio) from reflectance data\n",
     "* Read in GBIF Occurrence Records using the pygbif package\n",
     "* Visualize AOP Imagery and GBIF records together\n",
-    "* Conduct exploratory analysis to see if and how the fire impacted the beetle trap presence/absence data\n",
+    "* Conduct exploratory analysis to see if and how the fire impacted Carabid species composition\n",
     "\n",
     "### Requirements\n",
     "\n",
