added bycatch info

--- a/tutorials/Other/GEE_Python/04_aop_gbif/Intro_AOP_GBIF_GEE_Python.ipynb
+++ b/tutorials/Other/GEE_Python/04_aop_gbif/Intro_AOP_GBIF_GEE_Python.ipynb
@@ -44,16 +44,12 @@
     "#### Ground Beetles and the NEON Biorepository\n",
     "Ground beetles (Coleoptera: Carabidae) are widely recognized as effective bioindicators due to their sensitivity to environmental changes, particularly in relation to environmental changes, vegetation structure, and habitat disturbance. They are highly diverse, relatively easy to sample, and their community composition often reflect changes in local and landscape-scale conditions. Following natural or anthropogenic disturbances, beetle communities typically shift — favoring small-bodied, mobile, and ecologically flexible species in the early stages of recovery. As the habitat stabilizes over time, habitat specialists become more prevalent. Tracking these changes in species composition and abundance offers insight into ecosystem processes and can help assess the trajectory of recovery or the effectiveness of restoration efforts.\n",
     "\n",
-    "At NEON field sites, Carabid beetles are captured biweekly during the growing season using pitfall traps. Once collected, the beetles are sorted and identified to the species level. Some of the specimens are preserved as reference vouchers by pinning, while the remaining beetles are stored in 95% ethanol for future archival purposes. These specimens are ultimately stored in the NEON Biorepository, housed at Arizona State University, for long-term storage and curation. The NEON Biorepository makes these datasets available via <a href=\"https://www.gbif.org/\" target=\"_blank\">GBIF</a>, a global platform that aggregates biodiversity data from thousands of sources.\n"
+    "At NEON field sites, Carabid beetles are captured biweekly during the growing season using pitfall traps. The trap contents are then sorted, with Carabids separated and identified to the species level. Select specimens are preserved as individual pinned reference vouchers, while the rest are stored in 95% ethanol for long-term archiving. Non-Carabid material from the traps is also retained for future use. All specimens are ultimately stored in the NEON Biorepository, housed at Arizona State University, for long-term storage and curation. The NEON Biorepository makes these datasets available via <a href=\"https://www.gbif.org/\" target=\"_blank\">GBIF</a>, a global platform that aggregates biodiversity data from thousands of sources.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
     "<div id=\"ds-objectives\" markdown=\"1\">\n",
     "\n",
